--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "backend/app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "build": "npm install --legacy-peer-deps  && npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
   },
   "author": "ayush",
   "license": "ISC",
