--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "backend/app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node backend/app.js",
     "dev": "nodemon app.js",
     "build": "npm install --legacy-peer-deps  && npm install --legacy-peer-deps --prefix Chat-app-ui && npm run build --prefix Chat-app-ui"
   },
